# xstack-klokkos

./: .gitignore  README.md  example3-1.cpp
formal-specification/coq/: Kokkos.v  setup.sh
formal-specification/prelim/: _CoqProject
formal-specification/vivekfest/: Makefile  Makefile.conf  _CoqProject
klee-2.3/: .gitignore  BUILD.md  CMakePresets.json  README.md
klee-model-plugin/KLEE-KOKKOSMODEL-PLUGIN/: README.build_March19
klee-model-plugin/Kokkos-Model/: CMakeLists.txt  Kokkos_Model.cpp  Kokkos_Model.hpp
klee-model-plugin/Kokkos-Model/Kokkos-Model-Examples/: CMakeLists.txt  README.klee_invoke  RaceCondition_parallel_for_lambda.cpp
kokkos-examples/ExampleMistakes/ConditionInKernel/UsingDefaultExecutionSpace/: CMakeLists.txt  MatrixComputation.cpp  simple-fixed++.cpp
kokkos-examples/ExampleMistakes/NestedLoopBug1/: CMakeLists.txt
kokkos-examples/ExampleParallelFor/: parallel_for_nokokkos.cpp
kokkos-examples/Heat3D/: CMakeLists.txt  main.cpp  mpi3d.cpp
kokkos-examples/HelloWorld/: hello_world1.cpp  hello_world3.cpp  hello_world5.cpp
kokkos-examples/Misc/: reduce_functor.cpp  reduce_lambda_mistake.cpp
kokkos-examples/canonical-mistakes/: .gitignore  CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  llvm-build.sh
kokkos-examples/other-examples/CanonicalMistakes/: .gitignore  CMakeLists.txt  example4.cpp  llvm-build.sh
kokkos-examples/other-examples/ExampleMistakes/: CMakeLists.txt  README
kokkos-examples/other-examples/ExampleMistakes/ConditionInKernel/: CMakeLists.txt  MatrixComputationCuda.h  MatrixComputationSerial.h  README.md
kokkos-examples/other-examples/ExampleMistakes/ConditionInKernel/UsingDefaultExecutionSpace/: simple-fixed.cpp  simple.cpp  verifyResult.py
kokkos-examples/other-examples/ExampleMistakes/DeepSoftCopyBug/: CMakeLists.txt  DeepSoftCopyBug1.cpp  DeepSoftCopyBug1_100.out  DeepSoftCopyBug1_1000.out  DeepSoftCopyBug1_100000.out  READEME
kokkos-examples/other-examples/ExampleMistakes/InitializationBug/: CMakeLists.txt  InitializationBug.cpp
kokkos-examples/other-examples/ExampleMistakes/LAMMPSDefects/lammps-1/: README.md
kokkos-examples/other-examples/ExampleMistakes/LAMMPSDefects/lammps-10/: compute_temp_kokkos-buggy.cpp
kokkos-examples/other-examples/ExampleMistakes/LAMMPSDefects/lammps-11/: compute_temp_kokkos-buggy.cpp
kokkos-examples/other-examples/ExampleMistakes/LAMMPSDefects/lammps-12/: atom_vec_full_kokkos-buggy.cpp
kokkos-examples/other-examples/ExampleMistakes/LAMMPSDefects/lammps-13/: README.md  atom_vec_sphere_kokkos-buggy.cpp
kokkos-examples/other-examples/ExampleMistakes/LAMMPSDefects/lammps-14/: README.md
kokkos-examples/other-examples/ExampleMistakes/LAMMPSDefects/lammps-16/: README.md  fix_nve_kokkos-buggy.cpp  in.comb.Si
kokkos-examples/other-examples/ExampleMistakes/LAMMPSDefects/lammps-17/: bond_harmonic_kokkos-buggy.cpp
kokkos-examples/other-examples/ExampleMistakes/LAMMPSDefects/lammps-18/: README.md
kokkos-examples/other-examples/ExampleMistakes/LAMMPSDefects/lammps-19/: README.md
kokkos-examples/other-examples/ExampleMistakes/LAMMPSDefects/lammps-20/: README.md  in.deposit.atom  nbin_kokkos-fixed.cpp
kokkos-examples/other-examples/ExampleMistakes/LAMMPSDefects/lammps-3/: README.md  atom_kokkos-fixed.cpp
kokkos-examples/other-examples/ExampleMistakes/LAMMPSDefects/lammps-5/: README.md  final.data  run.txt  structure.txt  thermo_data.txt
kokkos-examples/other-examples/ExampleMistakes/LAMMPSDefects/lammps-6/: pair_eam_kokkos-buggy.cpp
kokkos-examples/other-examples/ExampleMistakes/LAMMPSDefects/lammps-7/: README.md
kokkos-examples/other-examples/ExampleMistakes/LAMMPSDefects/lammps-8/: in.balance  pair_lj_cut_kokkos-buggy.cpp
kokkos-examples/other-examples/ExampleMistakes/LAMMPSDefects/lammps-9/: in.balance.bond.fast
kokkos-examples/other-examples/ExampleMistakes/NestedLoopBug1/: NestedLoopBug1.cpp  run.sh
kokkos-examples/other-examples/ExampleMistakes/NotUsingAtomicsBug/: NotUsingAtomicsBug_100000_5.out  NotUsingAtomicsBug_10000_1.out  NotUsingAtomicsBug_10000_3.out  NotUsingAtomicsBug_10000_4.out  NotUsingAtomicsBug_10000_5.out  NotUsingAtomicsBug_1000_1.out  NotUsingAtomicsBug_1000_3.out  NotUsingAtomicsBug_1000_4.out  NotUsingAtomicsBug_1000_5.out  NotUsingAtomicsBug_100_1.out  NotUsingAtomicsBug_100_2.out  NotUsingAtomicsBug_100_3.out
kokkos-examples/other-examples/ExampleMistakes/RaceBetweenDevices3/: CMakeLists.txt  RaceBetweenDevices3.cpp
kokkos-examples/other-examples/ExampleMistakes/RaceCondition1/: RaceCondition1.cpp
kokkos-examples/other-examples/ExampleMistakes/RaceCondition2/: RaceCondition2.cpp
kokkos-examples/other-examples/ExampleMistakes/ScratchSpaceMistake1/: ScratchSpaceMistake1.cpp
kokkos-examples/other-examples/ExampleMistakes/ViewDefaultMemorySpaceBug1/: ViewDefaultMemorySpaceBug1.cpp
kokkos-examples/other-examples/ExampleMistakes/ViewOutOfBoundBug1Output/: ViewOutOfBoundBug1_1000.out  ViewOutOfBoundBug1_10000.out  ViewOutOfBoundBug1_100000.out  run.sh
kokkos-examples/other-examples/ExampleMistakes/ViewOutOfBoundBug2Output/: ViewOutOfBoundBug2.cpp  ViewOutOfBoundBug2_100_200.out  ViewOutOfBoundBug2_100_300.out  ViewOutOfBoundBug2_300_200.out  ViewOutOfBoundBug2_300_400.out  ViewOutOfBoundBug2_400_200.out  ViewOutOfBoundBug2_400_400.out  run.sh
kokkos-examples/other-examples/ExampleParallelFor/: CMakeLists.txt  parallel_for_lambda.cpp
kokkos-examples/other-examples/HelloWorld/: CMakeLists.txt  hello_world2.cpp  hello_world4.cpp  hello_world_nokokkos.cpp
kokkos-examples/other-examples/ParallelScanExamples/: CMakeLists.txt
kokkos-examples/other-examples/SparseMatrixExamples/: CMakeLists.txt  SparseMatrixExample1.cpp  SparseMatrixExample2.cpp  SparseMatrixExample3.cpp  SparseMatrixExampleNoKokkos.cpp
kokkos-mistakes/: CMakeLists.txt  README.md  example-dcm.cpp  example-msm1.cpp  example-smv.cpp  example-voob1.cpp  example-voob2.cpp  example2.cpp  llvm-build.sh
kokkos-mock/: Kokkos_Core.hpp  README.md
kokkos-trans/: IdentityTranslator.cpp  RosetoClangFrontendTrans.C  kokkostoModelTrans.cpp
(+96 files in other folders)
